2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.cfg: Update.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (PXE): Remove not present variables.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (defserver_set_env): New function.
	(defserver_get_env): Likewise.
	(GRUB_MOD_INIT): Register net_default_server and pxe_default_server.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (read_device_map): Skip invalid Fedora
	entries.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/menuentry.c: Add TRANSLATORS comments.
	* grub-core/kern/emu/hostdisk.c: Likewise.

2012-05-03  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Handle hurd userspace partitions.

	* util/getroot.c (find_hurd_root_device): New function.
	(grub_guess_root_devices): Use find_hurd_root_device on Hurd.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (convert_system_partition_to_system_disk); Add etherd
	names.
	Reported by: Bastian Blank.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_lzo_decompress): Fix offset when
	crossing page boundary.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix B-tree search in BFS, especially in presence of non-ASCII
	characters.

	* grub-core/fs/bfs.c (bfs_strcmp): New function.
	(find_in_b_tree): Use standard bsearch + btree algorithm.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (cmd_cmp): Avoid comparing devices, pipes
	and so on.

2012-05-03  Matthew Garrett  <mjg@redhat.com>
2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Suspend broadcom cards in order to stop their DMA.

	* grub-core/Makefile.am (KERNEL_HEADER_FILES): Add pci.h on x86 EFI.
	* grub-core/Makefile.core.def (kernel): Add pci.c on x86 EFI.
	(pci): Don't build on x86 EFI.
	* grub-core/bus/pci.c (grub_pci_find_capability): New function.