@@ -1,5 +1,10 @@
 2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/kern/fs.c (grub_fs_probe) [GRUB_UTIL]: Add workaround for
+	btrfs.
+
+2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* docs/grub.cfg: Update.
 
 2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
